crates/query/src/snapshots/kclvm_query__tests__list_variables-29.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "shb.a.data.d.e": [
    {
      "name": "e",
      "type_name": "",
      "op_sym": ":",
      "value": "{\n    \"f\": 3\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "f",
          "value": {
            "name": "f",
            "type_name": "",
            "op_sym": ":",
            "value": "3",
            "list_items": [],
            "dict_entries": []
          }
        }
      ]
    }
  ]
}
