crates/query/src/snapshots/kclvm_query__tests__list_variables-30.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "uconfa.name": [
    {
      "name": "name",
      "type_name": "",
      "op_sym": "=",
      "value": "\"b\"",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
