crates/query/src/snapshots/kclvm_query__tests__list_variables-33.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "union_list": [
    {
      "name": "union_list",
      "type_name": "",
      "op_sym": "=",
      "value": "[\n    *_list0\n    *_list1\n]",
      "list_items": [
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "*_list0",
          "list_items": [],
          "dict_entries": []
        },
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "*_list1",
          "list_items": [],
          "dict_entries": []
        }
      ],
      "dict_entries": []
    }
  ]
}
